# rdkit

./: .clang-format  .gitignore  BACKLOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: clang-format-check.yml  macos_test.yml  quality_check.yml  test_suite.yml
benches/: molecule_benchmark.rs
examples/: smiles_enumeration.rs  tautomer_enumerator.rs  tautomer_enumerator_example.rs
rdkit-sys/: Cargo.toml  README.md  build.rs  rustfmt.toml
rdkit-sys/examples/: rdkit_sys_tautomer_enumerator.rs
rdkit-sys/src/: lib.rs
rdkit-sys/src/bridge/: fingerprint.rs  frag_catalog.rs  mod.rs  mol_ops.rs  mol_standardize.rs  periodic_table.rs  ro_mol.rs  (+2 more)
rdkit-sys/tests/: frag_catalog.rs  test_atoms.rs  test_descriptors.rs  test_fingerprint.rs  test_mol_ops.rs  test_mol_standardize.rs  test_periodic_table.rs  test_ro_mol.rs  test_rw_mol.rs  test_scaffold_network.rs  test_substruct_match.rs
src/: descriptors.rs  file_parsers.rs  fingerprint.rs  lib.rs  mol_standardize.rs  molecule.rs  periodic_table.rs  ro_mol.rs  rw_mol.rs  substruct_match.rs  tautomer_enumerator.rs  verbose_file_parsers.rs
src/graphmol/: atom.rs  frag_catalog.rs  mod.rs  mol_ops.rs  ro_mol.rs  rw_mol.rs
src/scaffold_network/: mod.rs  scaffold_network.rs  scaffold_network_params.rs
src/substruct_match/: mod.rs  substruct_match_item.rs  substruct_match_parameters.rs
tests/: test_atom.rs  test_descriptors.rs  test_file_parsers.rs  test_fingerprint.rs  test_graphmol.rs  test_mol_ops.rs  test_period_table.rs  test_periodic_table.rs  test_rdmol.rs  test_scaffold_network.rs  test_substruct.rs
(+20 files in other folders)
