[package]
name = "rdkit"
version = "0.2.10"
edition = "2021"
authors = ["Xavier Lange <xrlange@gmail.com>"]
license = "MIT"
description = "High level RDKit functionality for rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
cxx = "1"
log = "0.4"
rdkit-sys = "0.2.9"
#rdkit-sys = { path = "../rdkit-sys"}
flate2 = "1"

[dev-dependencies]
env_logger = "0.9.0"