[package]
name = "rdkit"
version = "0.4.11"
edition = "2021"
authors = ["Xavier Lange <xrlange@gmail.com>", "Javier Pineda <javierjpineda13@gmail.com"]
license = "MIT"
description = "High level RDKit functionality for rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rdkit-sys"]

[dependencies]
bitvec = "1"
byteorder = "1.4.3"
cxx = "1"
flate2 = "1"
log = "0.4"
rdkit-sys = { path = "rdkit-sys", version = "0.4.9" }
thiserror = "1"

[dev-dependencies]
env_logger = "0.9.0"
